fixing division spacing

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ body{
     color: #5E56E7;
     background-color: #F8F7FF;
 }
+.heading{
+    width: 100%;
+    padding: 10px 0px 10px 0px;
+}
 .textbox{
     border-radius: 4px;
     padding: 0px 10px 0px 10px;
@@ -14,6 +18,7 @@ body{
     padding: 0px 10px 0px 10px;
     height: 50px;
     text-align: center;
+    position: relative;
 }
 .bookCard{
     width: 114px;
